--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "binary-parser": "^1.5.0",
     "config": "^3.2.4",
     "express": "^4.17.1",
     "moment": "^2.24.0",
